# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.9 $ $Date: 2007-06-29 22:55:30 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2007-06-29  Christian Heller  <christian.heller@tuxtax.de>

        * Rename controller/manager/initial_signal_manager.c into controller/initialiser.c
            and move source code for initial signal there
        * Read "enable" property for all operations in handler.c;
            CAUTION! ALL logic models (operations) have to have an "enable" property
            now and are only executed, if that property is set to "true";
            this is necessary for using conditional execution, depending on a flag

2007-06-28  Christian Heller  <christian.heller@tuxtax.de>

        * Add new cybol operations for comparing strings: all, prefix, suffix, part
        * Implement enable flag for all signals (operations), in order to handle conditional execution

2007-06-24  Christian Heller  <christian.heller@tuxtax.de>

        * Add new operation 'get'
        * Rename equally named function in accessor.c and all code to 'get_element'
        * Rename 'set' function to 'set_element' in all code, in order to be uniform

2007-06-22  Christian Heller  <christian.heller@tuxtax.de>

        * Replace "Linux" symbol names in all project and source files with "GNU/Linux"; see:
            http://www.gnu.org/gnu/linux-and-gnu.html

2007-06-16  Christian Heller  <christian.heller@tuxtax.de>

        * Add new or extend operations like copy, count, compare etc.
        * Extend send_shell function with line_feed option
        * Update loop function
